--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -1,10 +1,19 @@
 <h2>Page View Report</h2>
-<ul>
 
-{% for greeting in greetings %}
-    <li>{{ greeting.test }}</li>
+{{image}}
+<p>{{Name}}</p>
+<p>{{Description}}</p>
+<hr>
+<!-- <p>{{Images}}</p> -->
+
+{% for image in Images %}
+    <img alt="sample" src="data:image/png;base64,{{image}}" }>
+    <!-- <p>{{ image }}</p> -->
 {% endfor %}
 
-</ul>
+<!-- {% for greeting in greetings %}
+    <p>{{ greeting.test }}</p>
+{% endfor %} -->
 
-</div>
+
+
